pkg/reconciler/openshift/tektonresult/testdata/static/tekton-results/route-rbac/rbac.yaml
# Copyright 2024 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    rbac.authorization.k8s.io/aggregate-to-view: "true"
  name: tekton-results-route-view
  namespace: openshift-pipelines
rules:
- apiGroups:
  - route.openshift.io
  resources:
  - routes
  verbs:
  - get
  resourceNames:
  - tekton-results-api
---
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: tekton-results-route-view-auth
roleRef:
  kind: ClusterRole
  name: tekton-results-route-view
  apiGroup: rbac.authorization.k8s.io
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: system:authenticated
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tekton-results-api
  namespace: openshift-pipelines
  labels:
    app.kubernetes.io/name: tekton-results-api
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/component: api
spec:
  to:
    kind: Service
    name: tekton-results-api-service
  port:
    targetPort: 8080
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
